# openai-cnv-chatgpt

./: .gitignore  README.md  pyproject.toml
src/openai_cnv_chatgpt/: __init__.py  prompt_template.txt
