[project]
name = "openai-cnv-chatgpt"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Shohei Nagata", email = "7954174+shohei1029@users.noreply.github.com" }
]
dependencies = [
    "openai~=0.27.8",
    "langchain~=0.0.27",
    "azure-cognitiveservices-speech~=1.29.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black~=23.3.0",
]

[tool.hatch.metadata]
allow-direct-references = true
